--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "echarts": "4.2.1",
     "vant": "^2.12.13",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
